--- a/Health Watch/Resources/layout/Main.axml
+++ b/Health Watch/Resources/layout/Main.axml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@android:color/background_light">
+    android:background="@drawable/stockbackground">
     <ImageView
         android:src="@drawable/hwlogo"
         android:layout_width="match_parent"
