--- a/Health Watch/Resources/layout/Rate.axml
+++ b/Health Watch/Resources/layout/Rate.axml
@@ -3,13 +3,14 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@android:color/background_light">
+    android:background="@drawable/stockbackground">
     <ImageView
         android:src="@drawable/hwlogo"
         android:layout_width="match_parent"
         android:layout_height="123.5dp"
         android:id="@+id/imageView1"
-        android:layout_marginBottom="75.0dp" />
+        android:layout_marginBottom="75.0dp"
+        android:layout_marginTop="22.5dp" />
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
